# rust_ml_training

./: Cargo.toml  data.csv
src/: candle2.rs  candle_ml.rs  main.rs  scratch_linear_regression.rs  test.rs
