[package]
name = "rust_ml_training"
version = "0.1.0"
edition = "2021"
default-run = "rust_ml_training"

[[bin]]
name = "linfa_ml"
path = "src/linfa_ml.rs"

[[bin]]
name = "candle_ml"
path = "src/candle_ml.rs"

[dependencies]
polars = { version = "0.32", features = ["lazy", "csv"] }
candle-nn = { version = "0.4" }
nalgebra = "0.29"
linfa = "0.7.0"
linfa-linear = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["diabetes"] }
ndarray = "0.15.6"
anyhow = "1.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.0"}
