[package]
name = "rust_ml_training"
version = "0.1.0"
edition = "2021"
default-run = "rust_ml_training"

[[bin]]
name = "linfa_ml"
path = "src/linfa_ml.rs"

[[bin]]
name = "candle_ml"
path = "src/candle_ml.rs"

[[bin]]
name = "candle2"
path = "src/candle2.rs"

[dependencies]
csv = "1.1.6"
ndarray = "0.15.3"
candle = { git = "https://github.com/huggingface/candle", package = "candle-core"}
anyhow = "1.0.40"
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
